# sdirl

./: .gitignore  README.md  grid_world.py  models.py  mountain_car.py  plot.py  run_menumodel.py  setup.py
cpp_models/: CMakeLists.txt  build.sh
cpp_models/libsrc/RLLib/include/: ControlAlgorithm.h  Hashing.h  PredictorAlgorithm.h  Projector.h  RL.h  StateToStateAction.h  Tiles.h
cpp_models/src/: ParamMountainCar.h  gridworld.h  main.cpp
gridworldmodel/: discrepancy.py  model.py
menumodel/: elfi_inference.py  observation.py  pybrain_extensions.py  rl_base.py  rl_model.py  summary.py  utils.py
notebooks/: gp_params_etc.ipynb  result_analysis.ipynb  rl_conv.ipynb
results/: analyze_single_experiments.py
rlmodel/: discrepancy.py  readme.md
sdirl/: bolfi_utils.py  elfi_utils.py  environment.py  experiments.py  inference_tasks.py  model.py  mountain_car.py  mpi.py  plot.py  run_choicemodel.py  run_gridworld.py  run_gridworld_disc.py  run_gridworld_time.py  run_menumodel.py  run_menumodel_disc.py  run_test.py
sdirl/choicemodel/: mdp.py  model.py
sdirl/gridworld/: mdp.py  model.py
sdirl/gridworldmodel/: data.py  feature_extraction.py  mdp.py  model.py
sdirl/menumodel/: elfi_inference.py  mdp.py  model.py  observation.py
sdirl/rl/: pybrain_extensions.py  simulator.py  utils.py
test/: conftest.py
test/functional/: test_experiment.py
test/unit/: test_bolfi_utils.py  test_elfi_utils.py  test_environment.py  test_experiments.py  test_inference_tasks.py  test_model.py
test/unit/gridworld/: test_gridworld_model.py
test/unit/menumodel/: test_menu_model.py
test/unit/rl/: test_simulator.py  test_utils.py
